# src/main/resources/swagger/open-api.yml
@@ -61,12 +61,12 @@ paths:
                 $ref: '#/components/schemas/UserSaveResponseDto'
         '201':
           description: Created
+        '400':
+          description: Bad Request
         '401':
           description: Unauthorized
         '403':
           description: Forbidden
-        '404':
-          description: Bad Request
         '409':
           description: Conflict
       deprecated: false
